Finalização OT18 BackEnd