@@ -8,10 +8,9 @@ public class Conexao {
 	
 	public Connection abrirConexao() {
 		try {
-			Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
-			conexao = java.sql.DriverManager
-					.getConnection("jdbc:mysql://localhost/bdcoldigo?"
-					+ "user=root&password=root&useTimezone=true&serverTimezone=UTC");
+			Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
+			conexao = java.sql.DriverManager.getConnection("jdbc:mysql://localhost/bdcoldigo?"
+					+ "user=root&password=1234&useTimezone=true&serverTimezone=UTC");
 		}catch(Exception e) {
 			e.printStackTrace();
 		}
